--- a/index.html
+++ b/index.html
@@ -6,15 +6,18 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Gonzalo Joyas</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
   <link rel="stylesheet" href="assets/css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
+  
   <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" href="./img/brand.png">
 </head>
 
 <div class="bodyy">
 <body>
+  
   <div class="container">
     <nav class="nav-main">
 
@@ -67,7 +70,6 @@
 
     <!-- PRODUCTOS -->
     <div class="productos">
-
       <div>
       <img src="img/cadena2.jpg" alt="Cadena Cubana">
       <h3>Lorem, ipsum dolor. </h3>
