--- a/pages/envios.html
+++ b/pages/envios.html
@@ -57,35 +57,23 @@
                 <p>Ofrecemos envíos <span> a domicilio</span> mediante Correo Argentino
                     <br>
 
-                    <p class="enviosclass"> Podras ver el seguimiento de tu pedido en <a
+                    <p class="enviosclass"> Podras ver el seguimiento de tu pedido en </p>
+                            
+                            <div class="uno">
+                                <a
                             href="https://www.correoargentino.com.ar/formularios/e-commerce" target="_blank"
-                            rel="noopener noreferrer">Envios</a></p>
-
-                    <p class="centrado">
-                        <iframe src="/gif/giphy.gif" frameBorder="0"></iframe>
-                    </p>
-                    <p class="paquete">
-                        <iframe src="/gif/giphy (1).gif" frameBorder="0"></iframe>
-
-
-                    </p>
-                    <p class="paqueteo">
-                        <iframe src="/gif/giphy (2).gif"    frameBorder="0"></iframe>
-              <footer class="potero"> 
-
-                            <div id="paginao">
-
-                                <div id="contenidoo"></div>
-                                <div id="pieo">GonzaloJoyas Copyright©
-                                    <div id="feeto"><a
-                                            href="mailto:gonzafernandezz23@gmail.com">gonzafernandezz23@gmail.com</a>
-                                    </div>
-
-                                </div>
-
-                        </footer>
-
+                            rel="noopener noreferrer">Mi pedido</a>
+                            </div>
+                            <div class="dos"> 
+                            <a href="https://www.correoargentino.com.ar/formularios/sucursales" target="_blank"    
+                            rel="noopener noreferrer"> Sucursales  </a> 
+                        </div>
     </body>
+    
 </div>
+<footer class="footer">
+    <h3>GonzaloJoyas Copyright©</h3>
+    <div id="feet"><a href="mailto:gonzafernandezz23@gmail.com">gonzafernandezz23@gmail.com</a></div>
+  </footer>
 </html>
 
