--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -7,6 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" type="text/css" href="/assets/css/style.css" />
   <title>Gonzalo Joyas💎</title>
+  <meta name="description" content="Contacto de GonzaloJoyas">
+  <meta name="keywords" content="CONTACTAR, GONZALO JOYAS, EMAIL, TELEFONO DE GONZALO JOYAS, NUMERO DE GONZALO JOYAS, LLAMAR A GONZALO JOYAS, RECLAMAR PEDIDO, DIRECCION GONZALO JOYAS">
 </head>
 
 <div class="bodycontact">
