--- a/pages/preguntas-frecuentes.html
+++ b/pages/preguntas-frecuentes.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gonzalo Joyas💎</title>
+    <meta name="description" content="Preguntas frecuentes de GonzaloJoyas">
+    <meta name="keywords" content="PREGUNTAS, DUDAS, PRECIOS, DEVOLUCION, CAMBIOS, CALIDAD">
     <link rel="stylesheet" href="/assets/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400&display=swap" rel="stylesheet">
