--- a/pages/productos.html
+++ b/pages/productos.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="/assets/css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400&display=swap" rel="stylesheet">
     <title>Productos</title>
+    <meta name="description" content="Productos de la mas ALTA calidad - GonzaloJoyas">
+    <meta name="keywords" content="GONZALO JOYAS, ANILLOS, ORO, DIAMANTES, CADENAS, COLLARES, RELOJES, PULSERAS, ARETES">
     <link rel="icon" type="image/png" href="/assets/css/img/brand.png">
 </head>
 <div class="bodyy">
