--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Gonzalo Joyas</title>
   <meta name="description" content="Las JOYAS al mejor PRECIO y las mas alta CALIDAD de todo el mercado, ANILLOS, DIAMANTES, CADENAS, RELOJES, ARETES y mucho más">
+  <meta name="keywords" content="GONZALO JOYAS, ANILLOS, ORO, DIAMANTES, CADENAS, COLLARES, RELOJES, PULSERAS, ARETES">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
   <link rel="stylesheet" href="assets/css/style.css">
