--- a/pages/envios.html
+++ b/pages/envios.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gonzalo Joyas💎</title>
+    <meta name="description" content="Sistema de envios inmediatos a todo el mundo de GonzaloJoyas">
+    <meta name="keywords" content="ENVIOS, GONZALO JOYAS, ENTREGAS, PEDIDOS, ENVIOS A TODO EL PAIS">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="stylesheet" href="/assets/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
