--- a/pages/redes.html
+++ b/pages/redes.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gonzalo Joyas💎</title>
+    <meta name="description" content="Redes sociales de GonzaloJoyas">
+    <meta name="keywords" content="INSTAGRAM, MENSAJERIA, FACEBOOK, LINKEDIN, ATENCION AL CLIENTE">
     <link rel="stylesheet" href="/assets/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
